@@ -12,6 +12,10 @@
 
 	* Report Writer module
 
+2012-05-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* cobc.c : Added conversion for enabling options in WIN style
+
 201?-??-??  ??
 
 	* parser.* : Added checks for RETURNING item: OCCURS, LOCAL-STORAGE
